# Linux_C_Application

./: README.md
11_thread/3_threadcreate/: threadcreate  threadcreate.c
11_thread/4_threadexit/: threadexit  threadexit.c
11_thread/5_threadrecycle/: threadrecycle  threadrecycle.c
11_thread/6_threadcancel/: cancelpoint  cancelpoint.c  setcancelstate  setcancelstate.c  testcancel  testcancel.c  threadcancel  threadcancel.c
11_thread/7_threaddetach/: detachother  detachother.c  detachself  detachself.c
15_led/: ledctnl  ledctnl.c
16_gpio/: gpio_in  gpio_in.c  gpio_intr  gpio_intr.c  gpio_out  gpio_out.c
17_inputdev/: input_gettouch  input_gettouch.c  input_key  input_key.c  input_mouse  input_mouse.c  input_mt  input_mt.c  input_print  input_print.c  input_st  input_st.c
18_tslib/: input_tslib_mt  input_tslib_mt.c  input_tslib_st  input_tslib_st.c
19_lcd/: lcd_baseshow  lcd_baseshow.c  lcd_bmp_show  lcd_bmp_show.c  lcd_bmp_show_test.c  lcd_followfingers  lcd_followfingers.c  lcd_myshow  lcd_myshow.c
20_lcdjpeg/: lcd_jpeg_show.c
21_lcdpng/: lcd_png_show  lcd_png_show.c  setjmp  setjmp.c
22_lcdverticaldisplay/: lcd_vertical_display_bmp  lcd_vertical_display_bmp.c
23_freetype/: lcd_freetype_show_char  lcd_freetype_show_char.c  lcd_show_char  lcd_show_char.c
24_pwm/: pwm_ctrl  pwm_ctrl.c
25_v4l2/: v4l2  v4l2.c
26_uart/: uart_ctrl  uart_ctrl.c
27_watchdog/: watch_dog  watch_dog.c
28_audio/: pcm_async_capture  pcm_async_capture.c  pcm_async_playback  pcm_async_playback.c  pcm_async_playback_ctl  pcm_async_playback_ctl.c  pcm_async_playback_ctl_mixer  pcm_async_playback_ctl_mixer.c  pcm_capture  pcm_capture.c  pcm_playback  pcm_playback.c  pcm_poll_capture.c  pcm_poll_playback  pcm_poll_playback.c
30_socket/: client  client.c  client_get_internetip.c  server  server.c  server_get_internetip.c
31_can/: can_sendrecv  can_sendrecv.c
32_cmake/cmake_set_crosscompile/: CMakeLists.txt  main.c
33_mqtt/: CMakeLists.txt  arm-linux-setup.cmake  lcd_followfingers_mqtt.c  lcd_freetype_show_char_mqtt.c  lcd_jpeg_show  mqttclient.c  pcm_async_playback_ctl_mixer_mqtt.c  pcm_poll_capture  v4l2_mqtt.c  文件来源须知.txt
(+165 files in other folders)
